[tool.poetry]
name = "pandlas"
version = "0.2.2"
description = "A powerful Python package that extends Pandas functionality to work with ATLAS SQLRace API, providing seamless data analysis and manipulation capabilities."
authors = ["Owen Foo <owen.foo@mclarenapplied.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/Software-Products/pandlas"
documentation = "https://github.com/Software-Products/pandlas/tree/main/docs"
keywords = ["atlas", "pandas", "sqlrace", "data-analysis", "automotive"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pythonnet = "3.0.1"
pandas = ">=1.5.3,<3"
tqdm = "^4.66.4"


[tool.poetry.group.test.dependencies]
pytest = ">=7.4.2,<7.5.0"
pytest-cov = ">=4.0.0,<4.1.0"
pytest-env = "^1.1.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"


[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"
black = "^24.2.0"

[tool.pytest_env]
PYTHONNET_RUNTIME="coreclr"
PYTHONNET_CORECLR_RUNTIME_CONFIG="C:\\Program Files\\McLaren Applied Technologies\\ATLAS 10\\MAT.Atlas.Host.runtimeconfig.json"

[tool.pytest.ini_options]
markers = [
    "atlaslicensed: requires ATLAS to be installed and licenced.",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
