[tool.poetry]
name = "Pandlas"
version = "0.3.0"
description = "A Pandas extension for reading and writing ATLAS 10 sessions via the SQLRace API."
authors = [
    "Owen Foo <owen.foo@mclarenapplied.com>",
    "Carles Abella <carles.abella@motionapplied.com>",
]
readme = "README.md"
repository = "https://github.com/Software-Products/pandlas"
classifiers = [
    "Private :: Do Not Upload",
    "Development Status :: 4 - Beta",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pythonnet = "3.0.1"
pandas = ">=1.5.3,<3"
tqdm = "^4.66.4"


[tool.poetry.group.test.dependencies]
pytest = ">=7.4.2,<7.5.0"
pytest-cov = ">=4.0.0,<4.1.0"
pytest-env = "^1.1.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"


[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"
black = "^24.2.0"

[tool.pytest_env]
PYTHONNET_RUNTIME="coreclr"
PYTHONNET_CORECLR_RUNTIME_CONFIG="C:\\Program Files\\McLaren Applied Technologies\\ATLAS 10\\MAT.Atlas.Host.runtimeconfig.json"

[tool.pytest.ini_options]
markers = [
"atlaslicensed: requires ATLAS to be installed and licenced.",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
